# yeast-seq2epxression-benchmark

./: .gitignore  Evaluation.ipynb  LICENSE  README.md  REFACTOR_PLAN.md  ROADMAP.md  benchmarks.md  figure3_deboer.ipynb  pyproject.toml
benchmarks/: brooks_scramble.md  caudal_eqtl.md  chen_synonymous.md  cuperus_mpra_5utr.md  kita_eqtl.md  shalem_mpra_terminator.md  wu_rfpins.md
configs/: brooks.yaml  default.yaml  test.yaml
papers/: Shorkie_eQTL.md
scripts/brooks/: build_brooks_distribution.py  compare_models.py
scripts/chen/: build_construct_reference.py  build_distribution_tsvs.py
scripts/eqtl/: build_caudal_v1_distribution.py
scripts/eqtl/0_data_generation/: 1_generate_negs.py
scripts/eqtl/3_visualization/: 1_roc_pr_shorkie_fold.py
scripts/shalem/: build_dee2_median_tpm.py  select_host_genes.py
scripts/wu/: build_cassette_fasta.py  dump_yorzoi_tracks.py  verify_cassette.py
src/yeastbench/: cli.py  compare.py  config.py  harness.py  registry.py  utils.py
src/yeastbench/adapters/: _deboer_scaffold.py  _genome.py  _marginalized_mpra.py  _shalem_scaffold.py  _shorkie_constants.py  _wu_scaffold.py  _yorzoi_constants.py  protocols.py  shorkie_brooks.py  shorkie_chen.py  shorkie_eqtl.py  shorkie_mpra.py  shorkie_mpra_marginalized.py  shorkie_shalem.py  shorkie_wu.py  yorzoi_brooks.py  yorzoi_chen.py  yorzoi_eqtl.py  yorzoi_mpra.py  yorzoi_mpra_marginalized.py  yorzoi_shalem.py  yorzoi_wu.py
src/yeastbench/adapters/baselines/: cai.py  codon_transformer.py
src/yeastbench/benchmarks/: _metrics.py  base.py  brooks.py  chen.py  eqtl.py  mpra.py  rfpins.py  shalem.py
src/yeastbench/deboer/: __init__.py  dataset.py
src/yeastbench/models/shorkie/: __init__.py  nn.py  wrapper.py
src/yeastbench/models/yorzoi/: __init__.py  wrapper.py
tests/: conftest.py  test_brooks.py  test_chen.py  test_cli_persistence.py  test_compare.py  test_config.py  test_eqtl.py  test_mpra.py  test_mpra_marginalized.py  test_registry.py  test_rfpins.py  test_shalem.py
