[project]
name = "yeast-seq2epxression-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy",
    "pandas>=3.0.2",
    "pyfonts>=1.3.0",
    "pypalettes>=0.2.1",
    "pysam>=0.23.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
shorkie = [
    "h5py",
    "torch>=2.11.0",
]
yorzoi = [
    "flash-attn",
    "yorzoi>=0.0.3",
]
all = [
    "yeast-seq2epxression-benchmark[shorkie,yorzoi]",
]
dev = [
    "ipykernel>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yeastbench"]

[tool.uv.sources]
flash-attn = { url = "https://github.com/adithyaxx/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3%2Bcu13torch2.11cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
